[package]
name = "audio_device_tester"
description = "Test audio devices and report errors and long delays in operations"
version = "0.1.4"
authors = ["Taneli Kaivola <tanelikaivola@users.noreply.github.com>"]
edition = "2021"
repository = "https://github.com/tanelikaivola/audio_device_tester"
license = "GPL-3.0-only"
readme = "README.md"
categories = ["command-line-utilities", "multimedia::audio"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
cpal = "0.14.2"
itertools = "0.10.5"
termcolor = "1.2.0"
